# comp

./: README.md  pyproject.toml  requirements.txt
Ex1/: 01_pendulum.py  02_double-pendulum.py  3_Stability_Analysis.py  5_dp_animation.py  Ex1-submission_Gschaider-Grosinger-Wallner.rar  double_pendulum_de.py  flo_test.py  runge_kutta.py  runge_kutta_adaptive-v2.py  runge_kutta_adaptive.py  runge_kutta_test.py  test.py
Ex2/: 01_solving_a_system_of_linear_equations.py  01_system-of-linear-equations.py  02_electron_transmission.py  02_ring_function.py  03_electron-transmission.py  03_poisson_equation.py  03_poisson_equation_2.py  04_electron_transmission_2-hopps.py  04_ring-function.py  CP-Ex2_Gschaider-Grosinger_Wallner.rar  gauss_seidel.py  gauss_seidel_float.py  ring_function.py
Ex2/temp/: 03_electron-transmission.py  03_new.py
Ex3/: 01_t-i_schroedinger.py  02_Time_Dependent_Crank_Nicholson_final.py  03_Split_Operator_final.py  crank_nicolson_module.py  t-i_schroedinger-equ.py  test.py
Ex3/txt/: 01-df_expectation-value_s.txt  01-df_variance_s.txt  01d_referenzwerte_potentiale
Ex4/01_SolarSystem/: 02_Solar_System.py  runge_kutta.py
Ex4/02_SVD/: 01_SVD.py
